--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -66,4 +62,10 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.NavBar {
+  display: flex;
+  padding: 25px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
