--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,9 @@ button:focus-visible {
   padding: 25px;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
+
+.HeroGridIMG {
+  max-width: 80%;
+  height: auto;
+  margin-top: 30px;
+}
