--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ button:focus-visible {
 
 .Experiences > h1 {
   letter-spacing: -0.05em;
+  margin-bottom: 20px;
 }
 
 @media (min-width: 820px) {
