--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,7 @@ button:focus-visible {
   font-size: 14px;
   margin-bottom: 15px;
   align-items: center;
+  position: relative;
 }
 
 .CardImage img {
@@ -128,6 +129,16 @@ button:focus-visible {
 .cardList{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+}
+
+.cardBadge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
 
 
